# 27spring

./: .gitignore  .rust.instructions.md  404.html  ASU_vs_Shanghai_ROI_Analysis.html  Cargo.toml  README.md  all_schools.html  index.html  justfile  print.html  roi.html  searchindex.js  searchindex.json
.github/workflows/: web.yml
config/: README.md  app.yaml  costs.yaml  regions.yaml  schools.yaml
docs/: book.toml
docs/src/: ASU_vs_Shanghai_ROI_Analysis.md  SUMMARY.md  all_schools.md  gpt_promt.md  roi.md
migrations/2024-01-01-000000_create_profiles/: down.sql  up.sql
src/: main.rs
src/calculator/: mod.rs  roi_calculator.rs
src/db/: manager.rs
src/models/: profile.rs
src/ui/: mod.rs  profile_creator.rs
