[package]
name = "run"
version = "0.1.0"
edition = "2024"

[dependencies]
confy = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rusqlite = { version = "0.31.0", features = ["chrono"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2.1"
thiserror = "1.0"
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
async-trait = "0.1"
scraper = "0.18"
select = "0.6"
