[package]
name = "run"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
confy = "0.6"
crossterm = "0.28"
dialoguer = "0.11.0"
diesel = { version = "2.1.0", features = ["sqlite", "chrono", "uuid"] }
diesel_migrations = "2.1.0"
dirs = "5.0"
dotenvy = "0.15"
plotters = "0.3.7"
rand = "0.8"
ratatui = "0.28"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smart-default = "0.7.1"
tabled = "0.20.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
turso = "0.1.4"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
